# Trip-Hub

./: .env  .env.example  .gitignore  AUDIT_REPORT.md  Dockerfile  README.md  clean_cache.py  docker-compose.yml  log_config.json  log_manager.py  pyproject.toml  requirements.txt  server_log.txt
src/: main.py
src/core/: config.py  locker.py  logger.py  profiler.py  router.py  utils.py
src/data/: database.py
src/logic/: auth_service.py  banner_service.py  chat_service.py  checklist_service.py  finance_service.py  flight_service.py  notification_service.py  place_service.py  protocol_service.py
src/logic/utilities/: customs_rules.py  tax_engine.py
src/ui/components/: chat_content.py  content_factory.py  finance_content.py  flights_content.py  gallery_viewer.py  logistics_content.py  medical_content.py  modal_preview.py  smart_banner.py  traveler_content.py  upload_manager.py  utilities_content.py
src/ui/components/common/: image_carousel.py
src/ui/components/finance/: converter.py  dashboard.py  debts.py  expense_dialog.py  finance_manager.py  split_bill.py  transaction_list.py
src/ui/views/: country_view.py  dashboard_view.py  login_view.py
tests/: test_auth_service.py  test_banner_service.py  test_database_migration.py  test_final_fixes.py  test_final_security.py  test_phase6.py  test_phase8.py  test_phase9.py  test_place_extra_data.py  test_place_service.py  test_services_phase4.py  test_services_phase5.py
tests/core/: test_utils.py
tests/logic/: test_checklist_service.py  test_finance_service.py
tests/logic/utilities/: test_tax_engine.py
(+25 files in other folders)
